finished edit task dialog

--- a/pages/board.html
+++ b/pages/board.html
@@ -300,28 +300,27 @@
                     <input class="dlg-edit_input-text" type="text" placeholder="Add new Subtask">
                 </div>
                     <ul class="dlg-edit__subtask-list">
-                    <li class="dlg-edit__main__subtask">• Subtask Text                          
-                        <div class="subtask-edit-box d-none">
-                            <img class="subtask-edit-box__edit-img" src="../assets/img/edit.svg">
-                            <div class="separator"></div>
-                            <img class="subtask-edit-box__delete-img" src="../assets/img/delete.svg">
-                        </div>
-                    </li>
-                    <li class="dlg-edit__main__subtask">• Subtask Text                          
-                        <div class="subtask-edit-box d-none">
-                            <img class="subtask-edit-box__edit-img" src="../assets/img/edit.svg">
-                            <div class="separator"></div>
-                            <img class="subtask-edit-box__delete-img" src="../assets/img/delete.svg">
-                        </div>
-                    </li>
-                    <li class="dlg-edit__main__subtask">• Subtask Text                          
-                        <div class="subtask-edit-box d-none">
-                            <img class="subtask-edit-box__edit-img" src="../assets/img/edit.svg">
-                            <div class="separator"></div>
-                            <img class="subtask-edit-box__delete-img" src="../assets/img/delete.svg">
-                        </div>
-                    </li>
-
+                        <li class="dlg-edit__main__subtask">• Subtask Text                          
+                            <div class="subtask-edit-box">
+                                <img class="subtask-edit-box__edit-img" src="../assets/img/edit.svg">
+                                <div class="separator"></div>
+                                <img class="subtask-edit-box__delete-img" src="../assets/img/delete.svg">
+                            </div>
+                        </li>
+                        <li class="dlg-edit__main__subtask">• Subtask Text                          
+                            <div class="subtask-edit-box">
+                                <img class="subtask-edit-box__edit-img" src="../assets/img/edit.svg">
+                                <div class="separator"></div>
+                                <img class="subtask-edit-box__delete-img" src="../assets/img/delete.svg">
+                            </div>
+                        </li>
+                        <li class="dlg-edit__main__subtask">• Subtask Text                          
+                            <div class="subtask-edit-box">
+                                <img class="subtask-edit-box__edit-img" src="../assets/img/edit.svg">
+                                <div class="separator"></div>
+                                <img class="subtask-edit-box__delete-img" src="../assets/img/delete.svg">
+                            </div>
+                        </li>
                     </ul>
             </div>
         </main>
