d-none added to dialog

--- a/pages/board.html
+++ b/pages/board.html
@@ -242,7 +242,7 @@
     </dialog>
 
     <!-- task-info-Dialog - Edit variante: -->
-    <dialog id="dlg-box" class="dlg ">
+    <dialog id="dlg-box" class="dlg d-none ">
         <!-- ab hier rendern in die ID=dlg-box -->
         <header class="dlg-edit__header">
             <img class="dlg-edit__close-btn" src="../assets/img/close-delete-cross.svg" alt="">
