--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -67,8 +67,8 @@
 
                         <div class="content-left">
                             <div class="content-left__button-holder">
-                                <div class="filled-btn" id="add-new-contact-btn" onclick="displayAddContactDlg()">Add new contact<img
-                                        src="../assets/img/person-add.svg"
+                                <div class="filled-btn" id="add-new-contact-btn" onclick="displayAddContactDlg()">Add
+                                    new contact<img src="../assets/img/person-add.svg"
                                         alt="icon of a person with a plus-symbol"></div>
                             </div>
 
@@ -105,7 +105,8 @@
 
                             <div class="content-right__contact-info-card">
                                 <div class="contact-info-card__header">
-                                    <img id ="contact-profil-img" class="header__contact-profil-img" src="../assets/img/user-img-anna.svg"
+                                    <img id="contact-profil-img" class="header__contact-profil-img"
+                                        src="../assets/img/user-img-anna.svg"
                                         alt="colored circle with starting letters of name and surname">
                                     <div class="manage-contact__header">
                                         <h3 id="contact-name">Max Mustermann</h3>
@@ -125,6 +126,19 @@
                                     <p><strong>Phone</strong></p>
                                     <p id="contact-phone">+49 1111 111 111</p>
                                 </div>
+
+                                <svg width="200" height="200">
+                                    <!-- Circle -->
+                                    <circle cx="100" cy="100" r="50" fill="lightblue" stroke="var(--color-white)" stroke-width="2" />
+
+                                    <!-- Text centered in the circle -->
+                                    <text x="100" y="100" text-anchor="middle" dominant-baseline="middle" font-size="20"
+                                        fill="var(--color-white)">
+                                        Hello
+                                    </text>
+                                </svg>
+
+
 
                             </div>
                         </div>
