--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../styles/login-signup.css">
     <script src="../scripts/sign-up.js" defer></script>
     <script src="../templates/tpl-sign-up.js" defer></script>
+    <script src="../script.js" defer></script>
 </head>
 
 <body>
