--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" href="./assets/img/logo-black.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./styles/login-signup.css">
-    <script src="../scripts/db.js" defer></script>
-    <script src="/scripts/login.js" defer></script>
+    <script src="./scripts/db.js" defer></script>
+    <script src="./scripts/login.js" defer></script>
 </head>
 
 <body onload="getData()">
