Refactored db.js to split Firebase data fetching into users and tasks arrays. Working on addTask function createTask

--- a/pages/add-task-insert.html
+++ b/pages/add-task-insert.html
@@ -1,3 +1,5 @@
+<script src="../scripts/add-task.js" defer></script>
+
 <section id="task-content">
     <div class="task-content__header content-wrapper">
         <h1>Add Task</h1>
@@ -68,7 +70,7 @@
             <div class="empty-btn">Clear
                 <img src="../assets/img/close.svg" alt="close icon">
             </div>
-            <div class="filled-btn">Create Task
+            <div onclick="createTask()" class="filled-btn">Create Task
                 <img src="../assets/img/done.svg" alt="done icon">
             </div>
         </div>
