finish add task function createTask()

--- a/pages/add-task-insert.html
+++ b/pages/add-task-insert.html
@@ -53,8 +53,9 @@
             <div class="add-task__field">
                 <label for="category" class="required--after">Category</label>
                 <select name="category" id="category" required>
-                    <option value="1">Option1</option>
-                    <option value="2">Option2</option>
+                    <option value="" disabled selected hidden>Select task category</option>
+                    <option value="1">Technical Task</option>
+                    <option value="2">User Story</option>
                 </select>
             </div>
             <div class="add-task__field subtasks__input--border-color">
