--- a/pages/board.html
+++ b/pages/board.html
@@ -17,19 +17,12 @@
         <link rel="stylesheet" href="../styles/dlg-task-info.css">
         <link rel="stylesheet" href="../styles/dlg-edit-task.css">
         <link rel="stylesheet" href="../styles/dlg-add-task.css">
+       
+        <script src="../script.js" defer></script>
+        <script src="../scripts/load_inserts.js" defer></script>
+        <script src="../scripts/add-task.js" defer></script>
+        <script src="../scripts/dlg-edit-task.js" defer></script>
 
-        <script src="../scripts/load_inserts.js"></script>
-        <script src="../scripts/add-task.js"></script>
-        <!-- <script src="../script.js" defer></script>
-        <script src="../scripts/navigation.js" defer></script>
-        <script src="../scripts/board.js" defer></script>
-        <script src="../scripts/drag_and_drop.js" defer></script>
-        <script src="../scripts/task-card.js" defer></script>
-        <script src="../scripts/add_task.js" defer></script>
-        <script src="../scripts/dialog_add_contact.js" defer></script>
-        <script src="../templates/tpl_ticket.js" defer></script>
-        <script src="../templates/tpl_board.js" defer></script>
-        <script src="../templates/tpl_add_task.js" defer></script> -->
     </head>
 
     <nav aria-label="Primary navigation" id="nav-menu" class="nav-menu">
@@ -188,7 +181,7 @@
         <!-- ab hier rendern in die ID=dlg-box  -->
         <header class="dlg__header">
             <label class="dlg__header_task-category">${task.category}</label>
-            <img class="dlg__close-btn" src="../assets/img/close-delete-cross.svg" alt="">
+            <img class="dlg__close-btn" src="../assets/img/close-delete-cross.svg" alt="small cross as close button">
         </header>
         <main class="dlg__main">
             <label class="dlg__main__task-title">Kochwelt bla Blubb! & noch mehr Rezepte</label>
@@ -242,10 +235,10 @@
     </dialog>
 
     <!-- task-info-Dialog - Edit variante: -->
-    <dialog id="dlg-box" class="dlg d-none ">
+    <dialog id="dlg-box" class="dlg ">
         <!-- ab hier rendern in die ID=dlg-box -->
         <header class="dlg-edit__header">
-            <img class="dlg-edit__close-btn" src="../assets/img/close-delete-cross.svg" alt="">
+            <img class="dlg-edit__close-btn" src="../assets/img/close-delete-cross.svg" alt=" small cross as close button">
         </header>
         <main class="dlg-edit__main overflow-y">
             <div class="dlg-edit__main__title-box">
@@ -285,14 +278,25 @@
             </div>
             <div class="dlg-edit__main__task-assignments-box">
                 <label for="contacts-selection" class="dlg-edit__main__assignments-title">Assigned to</label>
-                    <select id="contacts-selection" name="contact-name">
+                    <!-- <select id="contacts-selection" name="contact-name">
                         <option value="">Select contacts to assign</option>
                         <option value="anna">Anna</option>
                         <option value="ben">Ben</option>
                         <option value="clara">Clara</option>
                         <option value="david">David</option>
                         <option value="ella">Ella</option>
-                    </select>
+                    </select> -->
+
+                <div class="contacts-selection">
+                <div id="contacts-select-box" class="select-box">Select contacts to assign</div>
+                <div id="select-contacts" class="select-contacts">
+                    <label><span>Anna</span><input type="checkbox" value="anna"></label>
+                    <label><span>Ben</span><input type="checkbox" value="ben"></label>
+                    <label><span>Clara</span><input type="checkbox" value="clara"></label>
+                    <label><span>David</span><input type="checkbox" value="david"></label>
+                    <label><span>Ella</span><input type="checkbox" value="ella"></label>
+                </div>
+                </div>
 
                 <div class="dlg-edit__main__assigned-user-container">
                     <div class="dlg-edit__user-box">
@@ -342,7 +346,10 @@
     </dialog>
 
     <!-- add-task-Dialog als insert: -->
-    <dialog id="dlg-box" class="dlg-add-task d-none">
+    <dialog id="dlg-box" class="dlg dlg-add-task d-none">
+        <header class="dlg-edit__header dlg-add-task-header">
+            <img class="dlg-edit__close-btn" src="../assets/img/close-delete-cross.svg" alt=" small cross as close button">
+        </header>
         <div data-insert="add-task-insert.html"></div>
     </dialog>
     </body>
