--- a/pages/board.html
+++ b/pages/board.html
@@ -278,25 +278,80 @@
             </div>
             <div class="dlg-edit__main__task-assignments-box">
                 <label for="contacts-selection" class="dlg-edit__main__assignments-title">Assigned to</label>
-                    <!-- <select id="contacts-selection" name="contact-name">
-                        <option value="">Select contacts to assign</option>
-                        <option value="anna">Anna</option>
-                        <option value="ben">Ben</option>
-                        <option value="clara">Clara</option>
-                        <option value="david">David</option>
-                        <option value="ella">Ella</option>
-                    </select> -->
+                    <div class="contacts-selection" id="contact-select">
+                    <div class="search-wrapper">
+                        <input type="text" id="contact-search" class="selector" placeholder="Search contacts to assign..." autocomplete="off"/>
+                    </div>
+                        <ul class="contact-options">
+                            <li data-user="anna">
+                                <div class="user-selection-field">
+                                    <svg width="32" height="32" viewBox="0 0 42 42">
+                                        <circle cx="21" cy="21" r="20" fill="#3b82f6" stroke="white" stroke-width="2" />
+                                        <text x="21" y="23" text-anchor="middle" dominant-baseline="middle" font-size="12" fill="white" font-family="sans-serif">A</text>
+                                    </svg>
+                                    <span class="username">Anna</span>
+                                </div>
+                                <img class="checkbox" src="../assets/img/checkbox-unchecked.svg" alt="checkbox" data-checked="false">
+                            </li>
 
-                <div class="contacts-selection">
-                <div id="contacts-select-box" class="select-box">Select contacts to assign</div>
-                <div id="select-contacts" class="select-contacts">
-                    <label><span>Anna</span><input type="checkbox" value="anna"></label>
-                    <label><span>Ben</span><input type="checkbox" value="ben"></label>
-                    <label><span>Clara</span><input type="checkbox" value="clara"></label>
-                    <label><span>David</span><input type="checkbox" value="david"></label>
-                    <label><span>Ella</span><input type="checkbox" value="ella"></label>
-                </div>
-                </div>
+                            <li data-user="ben">
+                                <div class="user-selection-field">
+                                    <svg width="32" height="32" viewBox="0 0 42 42">
+                                        <circle cx="21" cy="21" r="20" fill="#10b981" stroke="white" stroke-width="2" />
+                                        <text x="21" y="23" text-anchor="middle" dominant-baseline="middle"font-size="12" fill="white" font-family="sans-serif">B</text>
+                                    </svg>
+                                    <span class="username">Ben</span>
+                                </div>
+                                 <img class="checkbox" src="../assets/img/checkbox-unchecked.svg" alt="checkbox" data-checked="false">
+                            </li>
+
+                            <li data-user="clara">
+                                <div class="user-selection-field">
+                                    <svg width="32" height="32" viewBox="0 0 42 42">
+                                        <circle cx="21" cy="21" r="20" fill="#f97316" stroke="white" stroke-width="2" />
+                                        <text x="21" y="23" text-anchor="middle" dominant-baseline="middle" font-size="12" fill="white" font-family="sans-serif">C</text>
+                                    </svg>
+                                    <span class="username">Clara</span>
+                                </div>
+                                <img class="checkbox" src="../assets/img/checkbox-unchecked.svg" alt="checkbox" data-checked="false">
+                            </li>
+
+                            <li data-user="basti">
+                                <div class="user-selection-field">
+                                    <svg width="32" height="32" viewBox="0 0 42 42">
+                                        <circle cx="21" cy="21" r="20" fill="#f97316" stroke="white" stroke-width="2" />
+                                        <text x="21" y="23" text-anchor="middle" dominant-baseline="middle" font-size="12" fill="white" font-family="sans-serif">B</text>
+                                    </svg>
+                                    <span class="username">Basti</span>
+                                </div>
+                                <img class="checkbox" src="../assets/img/checkbox-unchecked.svg" alt="checkbox" data-checked="false">
+                            </li>
+
+                            <li data-user="sascha">
+                                <div class="user-selection-field">
+                                    <svg width="32" height="32" viewBox="0 0 42 42">
+                                        <circle cx="21" cy="21" r="20" fill="#f97316" stroke="white" stroke-width="2" />
+                                        <text x="21" y="23" text-anchor="middle" dominant-baseline="middle" font-size="12" fill="white" font-family="sans-serif">S</text>
+                                    </svg>
+                                    <span class="username">Sascha</span>
+                                </div>
+
+                                <img class="checkbox" src="../assets/img/checkbox-unchecked.svg" alt="checkbox" data-checked="false">
+                            </li>
+
+                            <li data-user="marvin">
+                                <div class="user-selection-field">
+                                    <svg width="32" height="32" viewBox="0 0 42 42">
+                                        <circle cx="21" cy="21" r="20" fill="#f97316" stroke="white" stroke-width="2" />
+                                        <text x="21" y="23" text-anchor="middle" dominant-baseline="middle" font-size="12" fill="white" font-family="sans-serif">M</text>
+                                    </svg>
+                                    <span class="username">Marvin</span>
+                                </div>
+
+                                <img class="checkbox" src="../assets/img/checkbox-unchecked.svg" alt="checkbox" data-checked="false">
+                            </li>
+                        </ul>
+                    </div>
 
                 <div class="dlg-edit__main__assigned-user-container">
                     <div class="dlg-edit__user-box">
