--- a/pages/board.html
+++ b/pages/board.html
@@ -21,7 +21,8 @@
         <script src="../script.js" defer></script>
         <script src="../scripts/load_inserts.js" defer></script>
         <script src="../scripts/add-task.js" defer></script>
-        <script src="../scripts/dlg-edit-task.js" defer></script>
+        <script src="../scripts/dlg-edit-task-assignment.js" defer></script>
+        <script src="../scripts/dlg-add-task-subtask-handling.js"></script>
 
     </head>
 
@@ -71,7 +72,7 @@
                         <h1>Board</h1>
                         <div class="task-search-and-add">
                             <div class="board__head__searchbox">
-                                <input type="search" placeholder="Find Task">
+                                <input id="search-tasks" type="search" placeholder="Find Task">
                                 <img class="search-btn" src="../assets/img/search.svg" onclick="focusInput()"
                                     alt="icon of an magnifying glass for better descripe of the search field">
                             </div>
@@ -180,42 +181,42 @@
     <dialog id="dlg-box" class="dlg d-none">
         <!-- ab hier rendern in die ID=dlg-box  -->
         <header class="dlg__header">
-            <label class="dlg__header_task-category">${task.category}</label>
+            <span class="dlg__header_task-category">${task.category}</span>
             <img class="dlg__close-btn" src="../assets/img/close-delete-cross.svg" alt="small cross as close button">
         </header>
         <main class="dlg__main">
-            <label class="dlg__main__task-title">Kochwelt bla Blubb! & noch mehr Rezepte</label>
+            <span class="dlg__main__task-title">Kochwelt bla Blubb! & noch mehr Rezepte</span>
             <span class="dlg__main__task-description">Rezepte und son kram und noch bissel mehr Text, damit sich das Ticket
                 auch lohnt</span>
             <div class="dlg__main__task__due-date">
-                <label class="dlg__main__task__due-date-label">Due date:</label>
+                <span class="dlg__main__task__due-date-span">Due date:</span>
                 <span class="dlg__main__task__due-date-value">10/10/2025</span>
             </div>
             <div class="dlg__main_task-priority-box"> 
-                <label class="dlg__main_task-priority-title">Priority:</label>
+                <span class="dlg__main_task-priority-title">Priority:</span>
                 <img id="priority" class="dlg_main_task-priority" src="../assets/img/task-priority-medium.svg"
                     alt="image of prioritylevel">
             </div>
             <div class="dlg__main__task-assignments">
-                <label class="dlg__main__assignments-title">Assigned to:</label>
+                <span class="dlg__main__assignments-title">Assigned to:</span>
                 <div class="dlg__user-box"> <!-- user images nur zur veranschaulichung. wird später mit JS gerendert -->
                     <img class="dlg__user-img" id="${task.user.id}" src="../assets/img/user-img-anna.svg"
                         alt="User Image or initials">
-                    <label class="dlg__user-name">User 1</label>
+                    <span class="dlg__user-name">User 1</span>
                 </div>
                 <div class="dlg__user-box">
                     <img class="dlg__user-img" id="${task.user.id}" src="../assets/img/user-img-david.svg"
                         alt="User Image or initials">
-                    <label class="dlg__user-name">User 2</label>
+                    <span class="dlg__user-name">User 2</span>
                 </div>
                 <div class="dlg__user-box">
                     <img class="dlg__user-img" id="${task.user.id}" src="../assets/img/user-img-sofia.svg"
                         alt="User Imare or initials">
-                    <label class="dlg__user-name">User 3</label>
+                    <span class="dlg__user-name">User 3</span>
                 </div>
             </div>
             <div class="dlg__main__task-subtask-box">
-                <label class="dlg__main__task-subtask-title">Subtasks:</label>
+                <span class="dlg__main__task-subtask-title">Subtasks:</span>
                 <div></div>
                 <span class="dlg__main__task-subtask"><img src="../assets/img/checkbox-unchecked.svg" alt="checkbox">Subtask
                     Text</span>
@@ -235,26 +236,26 @@
     </dialog>
 
     <!-- task-info-Dialog - Edit variante: -->
-    <dialog id="dlg-box" class="dlg ">
+    <dialog id="dlg-box" class="dlg">
         <!-- ab hier rendern in die ID=dlg-box -->
         <header class="dlg-edit__header">
             <img class="dlg-edit__close-btn" src="../assets/img/close-delete-cross.svg" alt=" small cross as close button">
         </header>
         <main class="dlg-edit__main overflow-y">
             <div class="dlg-edit__main__title-box">
-                <label class="dlg-edit__main__task-title">Title</label>
-                <input class="dlg-edit__input-text" type="text" placeholder="Enter a Title">
+                <span class="dlg-edit__main__task-title">Title</span>
+                <input id="title-input" class="dlg-edit__input-text" type="text" placeholder="Enter a Title">
             </div>
             <div class="dlg-edit__main__description-box">
-                <label class="dlg-edit__main__task-description">Description</label>
-                <textarea class="dlg-edit__textarea" type="text" placeholder="Enter a Description"></textarea>
+                <span class="dlg-edit__main__task-description">Description</span>
+                <textarea id="descriptions-input" class="dlg-edit__textarea" type="text" placeholder="Enter a Description"></textarea>
             </div>
             <div class="dlg-edit__main__due-date-box">
-                <label class="dlg-edit__main__due-date-title">Due Date</label>
-                <input class="dlg-edit__input-text" type="date">
+                <span class="dlg-edit__main__due-date-title">Due Date</span>
+                <input id="date-input" class="dlg-edit__input-text" type="date">
             </div>
             <div class="dlg-edit__main__task-priority-options-box">
-                <label class="dlg-edit__main__task-priority-title bold">Priority</label>
+                <span class="dlg-edit__main__task-priority-title bold">Priority</span>
                 <div class="dlg-edit__main__task-priority-btn-box">
                     <div class="priority-options-btn" id="urgent" onclick="changePriorityBtn(this)">Urgent 
                         <img src="../assets/img/priority-urgent.svg"
@@ -277,7 +278,7 @@
                 </div>
             </div>
             <div class="dlg-edit__main__task-assignments-box">
-                <label for="contacts-selection" class="dlg-edit__main__assignments-title">Assigned to</label>
+                <span class="dlg-edit__main__assignments-title">Assigned to</span>
                     <div class="contacts-selection" id="contact-select">
                     <div class="search-wrapper">
                         <input type="text" id="contact-search" class="selector" placeholder="Search contacts to assign..." autocomplete="off"/>
@@ -367,15 +368,15 @@
             </div>
             <div class="dlg-edit__main__subtasks-box">
                 <div class="dlg-edit__main__add-subtask-box" >
-                    <label class="dlg-edit__main__subtask-title">Subtasks</label>
-                    <input class="dlg-edit__input-text" type="text" placeholder="Add new Subtask">
+                    <span class="dlg-edit__main__subtask-title">Subtasks</span>
+                    <input id="subtask-input" class="dlg-edit__input-text" type="text" placeholder="Add new Subtask">
                 </div>
                     <ul class="dlg-edit__subtask-list">
                         <li class="dlg-edit__main__subtask">• Subtask Text                          
-                            <div class="subtask-edit-box">
-                                <img class="subtask-edit-box__edit-img" src="../assets/img/edit.svg">
-                                <div class="separator"></div>
-                                <img class="subtask-edit-box__delete-img" src="../assets/img/delete.svg">
+                                <div class="subtask-edit-box">
+                                    <img class="subtask-edit-box__edit-img" src="../assets/img/edit.svg">
+                                    <div class="separator"></div>
+                                    <img class="subtask-edit-box__delete-img" src="../assets/img/delete.svg">
                             </div>
                         </li>
                         <li class="dlg-edit__main__subtask">• Subtask Text                          
