--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -17,10 +17,7 @@
     <script src="../scripts/contacts.js" defer></script>
     <script src="../templates/tpl-contacts.js" defer></script>
     <script src="../script.js" defer></script>
-    <script src="../templates/tpl-userprofil.js" defer></script>
-    <script src="../scripts/render-user-img.js" defer></script>
-
-
+    <script src="../templates/tpl-user-profil-img.js" defer></script>
 </head>
 
 <body onload="renderContactList()">
@@ -76,43 +73,40 @@
                                     new contact<img src="../assets/img/person-add.svg"
                                         alt="icon of a person with a plus-symbol"></div>
                             </div>
-
                             <div class="contact-list">
-                                <!-- Hier werden später die Kontake reingerendert -->
-
                             </div>
-                        </div >
+                        </div>
 
-                            <div class="content-right">
-                                <div class="content-right__header">
-                                    <h1>Contacts</h1>
-                                    <div class="header__bluestrip"></div>
-                                    <span>Better with a team</span>
-                                </div>
+                        <div class="content-right">
+                            <div class="content-right__header">
+                                <h1>Contacts</h1>
+                                <div class="header__bluestrip"></div>
+                                <span>Better with a team</span>
+                            </div>
 
-                                <div class="content-right__contact-info-card">
-                                    <div class="contact-info-card__header">
-                                        <div class="header__contact-profil-img"></div>
-                                        <div class="manage-contact__header">
-                                            <h3 id="contact-name">Name</h3>
-                                            <div class="manage-contact__actions">
-                                                <img class="action__edit" src="../assets/img/edit-with-text.svg"
-                                                    alt="a grey pencil" onclick="renderEditContactDlg()">
-                                                <img class="action__delete" src="../assets/img/delete-with-text.svg"
-                                                    alt="a grey trashbin">
-                                            </div>
+                            <div class="content-right__contact-info-card invisible">
+                                <div class="contact-info-card__header">
+                                    <div class="header__contact-profil-img"></div>
+                                    <div class="manage-contact__header">
+                                        <h3 id="contact-name">Name</h3>
+                                        <div class="manage-contact__actions">
+                                            <img class="action__edit" src="../assets/img/edit-with-text.svg"
+                                                alt="a grey pencil" onclick="renderEditContactDlg()">
+                                            <img class="action__delete" src="../assets/img/delete-with-text.svg"
+                                                alt="a grey trashbin">
                                         </div>
                                     </div>
+                                </div>
 
-                                    <p class="contact-info__header">Contact Information</p>
-                                    <div class="contact-info__details">
-                                        <p><strong>Email</strong></p>
-                                        <p id="contact-email" class="details__email">max.mustermann@web.de</p>
-                                        <p><strong>Phone</strong></p>
-                                        <p id="contact-phone">+49 1111 111 111</p>
-                                    </div>
+                                <p class="contact-info__header">Contact Information</p>
+                                <div class="contact-info__details">
+                                    <p><strong>Email</strong></p>
+                                    <p id="contact-email" class="details__email">max.mustermann@web.de</p>
+                                    <p><strong>Phone</strong></p>
+                                    <p id="contact-phone">+49 1111 111 111</p>
                                 </div>
                             </div>
+                        </div>
                     </section>
                 </div>
                 <dialog id="dlg-box" class="add-contact__dialog d-none"></dialog>
