deleted script in insert. changed css. fixed hover effects in dlg

--- a/pages/add-task-insert.html
+++ b/pages/add-task-insert.html
@@ -1,4 +1,5 @@
-<script src="../scripts/add-task.js" defer></script>
+<!-- Im HTML Insert darf kein Script stehen / eingebunden werden, es wird ggf doppelt geladen und führt zu fehlern -->
+<!-- Scripte immer in der Hauptdatei einbinden -->
 
 <section id="task-content" class="content-wrapper">
     <div class="task-content__header">
