added css in edit-dialog, renamed js file, changed loadingposition of the js files

--- a/pages/add-task.html
+++ b/pages/add-task.html
@@ -17,7 +17,7 @@
     <script src="../scripts/db.js" defer></script>
     <script src="../script.js" defer></script>
     <script src="../scripts/add-task.js" defer></script>
-    <script src="../scripts/load_inserts.js" defer></script>
+    <script src="../scripts/load-inserts.js" defer></script>
 
 </head>
 
