--- a/pages/board.html
+++ b/pages/board.html
@@ -19,10 +19,10 @@
         <link rel="stylesheet" href="../styles/dlg-add-task.css">
        
         <script src="../script.js" defer></script>
-        <script src="../scripts/load_inserts.js" defer></script>
         <script src="../scripts/add-task.js" defer></script>
+        <script src="../scripts/load-inserts.js" defer></script>
         <script src="../scripts/dlg-edit-task-assignment.js" defer></script>
-        <script src="../scripts/dlg-add-task-subtask-handling.js"></script>
+        <script src="../scripts/dlg-add-task-subtask-handling.js" defer></script>
 
     </head>
 
@@ -236,7 +236,7 @@
     </dialog>
 
     <!-- task-info-Dialog - Edit variante: -->
-    <dialog id="dlg-box" class="dlg d-none">
+    <dialog id="dlg-box" class="dlg">
         <!-- ab hier rendern in die ID=dlg-box -->
         <header class="dlg-edit__header">
             <img class="dlg-edit__close-btn" src="../assets/img/close-delete-cross.svg" alt=" small cross as close button">
