implement clear function in add-task page

--- a/pages/add-task-insert.html
+++ b/pages/add-task-insert.html
@@ -69,7 +69,7 @@
     <div class="task-content__footer">
         <span class="required required--before"> This field is required</span>
         <div class="task-content__footer-btn">
-            <button class="empty-btn">Clear
+            <button type="button"  onclick="clearTask()" class="empty-btn">Clear
                 <img src="../assets/img/close.svg" alt="close icon">
             </button>
             <button type="submit" class="filled-btn">Create Task
