--- a/pages/add-task-insert.html
+++ b/pages/add-task-insert.html
@@ -47,8 +47,7 @@
             <div class="add-task__field">
                 <label for="assigned-to">Assigned to</label>
                 <select name="assigned-to" id="assigned-to">
-                    <option value="1">Option1</option>
-                    <option value="2">Option2</option>
+                    <option value="" disabled selected hidden>Select contacts to assign</option>
                 </select>
             </div>
             <div class="add-task__field">
