--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -43,13 +43,13 @@
 
                 <div id="password__wrapper" class="inputfield__wrapper">
                     <input id="password" type="password" placeholder="Password" aria-label="password" onkeyup="detectChange(this)">
-                    <img src="../assets/img/lock.svg" alt="icon of a lock">
+                    <img class="password-icon--state" src="../assets/img/lock.svg" alt="icon of a lock" onclick="setPasswordVisibility(this)">
                 </div>
 
                 <div id="confirm-pw__wrapper" class="inputfield__wrapper">
                     <input id="confirm-password" type="password" placeholder="Confirm Password"
                         aria-label="confirm password" onkeyup="checkMatchingPasswords()">
-                    <img src="../assets/img/lock.svg" alt="icon of a lock">
+                    <img src="../assets/img/lock.svg" alt="icon of a lock" onclick="setPasswordVisibility(this)">
                     <p id="pw-error-warning" class="confirm-password__err-warning">Your passwords don't match. Please
                         try again.</p>
                 </div>
