--- a/pages/add-task-insert.html
+++ b/pages/add-task-insert.html
@@ -18,7 +18,7 @@
             </div>
             <div class="add-task__field">
                 <label for="due-date" class="required required--after">Due date</label>
-                <input class="input--validation-modifier" type="date" id="due-date" placeholder="dd/mm/yyyy" required>
+                <input onclick="setMinDueDate()" class="input--validation-modifier" type="date" id="due-date" placeholder="dd/mm/yyyy" required>
             </div>
         </div>
         <div class="grey-seperator"></div>
