feat: add overlay in contacts. add min date in dlg edit-task

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -109,6 +109,7 @@
                         </div>
                     </section>
                 </div>
+                <overlay id="overlay" class="overlay d-none"></overlay>
                 <dialog id="dlg-box" class="add-contact__dialog d-none"></dialog>
             </main>
         </div>
