renamed a overlay div box

--- a/pages/board.html
+++ b/pages/board.html
@@ -178,7 +178,7 @@
         </main>
     </div>
 
-    <div id="overlay" class="overlay d-none"></div>
+    <overlay id="overlay" class="overlay d-none"></overlay>
     <dialog id="dlg-box" class="dlg d-none"></dialog>
     </body>
 
