--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             </div>
 
             <div class="useraccess-form__btnholder">
-                <div class="btn filled-btn">Log in</div>
-                <div class="btn guest">Guest Log in</div>
+                <div role="button" class="btn filled-btn">Log in</div>
+                <div role="button" class="btn guest">Guest Log in</div>
             </div>
         </form>
     </main>
