--- a/pages/add-task-insert.html
+++ b/pages/add-task-insert.html
@@ -46,7 +46,7 @@
             </div>
             <div class="add-task__field">
                 <label for="assigned-to">Assigned to</label>
-                <select name="assigned-to" id="assigned-to">
+                <select name="assigned-to" id="assigned-to" multiple>
                     <option value="" disabled selected hidden>Select contacts to assign</option>
                 </select>
             </div>
