--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <link rel="icon" href="./assets/img/logo-black.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./styles/login-signup.css">
-    <script src="./scripts/db.js" defer></script>
     <script src="./scripts/login.js" defer></script>
 </head>
 
-<body onload="getData()">
+<body>
     <header class="content-wrapper header">
         <img id="joinlogo" class="header__joinlogo start" src="./assets/img/logo-black.png"
             alt="the word: join with a big J with a blue dot on the left side,">
@@ -32,18 +31,18 @@
 
             <div class="form__inputfields">
                 <div class="inputfield__wrapper">
-                    <input type="email" placeholder="Email" aria-label="email">
+                    <input id="email" type="email" placeholder="Email" aria-label="email">
                     <img src="./assets/img/mail.svg" alt="icon of an email">
                 </div>
 
                 <div class="inputfield__wrapper">
-                    <input type="password" placeholder="Password" aria-label="password">
+                    <input id="password" type="password" placeholder="Password" aria-label="password">
                     <img src="./assets/img/lock.svg" alt="icon of a lock">
                 </div>
             </div>
 
             <div class="useraccess-form__btnholder">
-                <div role="button" class="btn filled-btn">Log in</div>
+                <div role="button" class="btn filled-btn" onclick="makeallthis()">Log in</div>
                 <div role="button" class="btn guest">Guest Log in</div>
             </div>
         </form>
